@@ -1,3 +1,10 @@
+Thu, 08 Nov 2007 21:25:19 +0100 <thp@perli.net>
+Add "gPodder download folder synchronizer" scripts to repository
+
+	* doc/dev/gdfs/gdfs-check.py: Added
+	* doc/dev/gdfs/gdfs-init.py: Added
+	* doc/dev/gdfs/README: Added
+
 Thu, 08 Nov 2007 20:01:13 +0100 <thp@perli.net>
 The mighty episode selector dialog and some menu re-arrangements
 
